#1690 uri